--- a/nicolasviado.html
+++ b/nicolasviado.html
@@ -2,7 +2,7 @@
     <main>
         <header>
             <h1>site dedicado a promover os trabalhos de nicolas</h1>
-            <img src="img/nicolasviado.jpg">
+            <img src="nicolasviado.jpg">
         </header>
     </main>
 </body>
